--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script defer src="index.js"></script>
 
 </head>
-<body class="bg-blue-500 font-sans">
+<body class="bg-gray-100 font-sans">
 
     <!-- TITLE -->
 
